# detect-compression

./: .travis.yml  Cargo.toml  Makefile  README.md  Readme.md
src/: lib.rs
